--- a/muensterdiscovery/index.html
+++ b/muensterdiscovery/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/6.14.0/flag-icons.min.css" />
     <title>muensterdiscovery</title>
   </head>
   <body>
